[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Giovanni Aviles", email = "giovanni.aviles@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "heapq",
    "typing"
]

[project.urls]
Home = "https://github.com/ggaviles/hw4-prim-mst/main/mst"
